Cap 2 Primi tre esercizi del capitolo 2. Scritta l'introduzione nel capitolo 1.

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,6 @@
-book_filename: "gitbook-demo"
-rmd_files: ["index.Rmd"]
+book_filename: "Il libro dello Spirito e del Tempo"
+rmd_files: ["index.Rmd",
+  "01-variabili.Rmd"]
 output_dir: "docs"
 language:
   ui:
